# Nightreign-Relic-Planner

./: .gitignore  CLAUDE.md  TESTING.md  package.json  pyproject.toml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  game_data.py  optimizer_pool.py
backend/tests/: conftest.py
frontend/: index.html  package.json  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts  utils.ts
frontend/src/client/: sdk.gen.ts
frontend/src/components/: OptimizeResults.tsx  RelicDisplay.tsx
frontend/src/hooks/: useAuth.ts  useLocalBuilds.test.ts  useLocalBuilds.ts  useSaveStatus.ts
frontend/tests/: builds.spec.ts  inventory.spec.ts  upload.spec.ts
nrplanner/: __init__.py  builds.py  checker.py  constants.py  data.py  models.py  optimizer.py  save.py  scoring.py  vessel.py
nrplanner/tests/: conftest.py  test_checker.py  test_data.py  test_diagnostic_solver.py  test_gold_standard.py  test_optimizer.py  test_optimizer_integration.py  test_save.py  test_scoring.py
relic_info/: deep_relic_effects.csv  info.md  order_priority.txt  relic_effects.csv  research_on_stacking.md  stack_effects.md  wiki_relic_effects.md  wiki_relics.md
src/: Final.py  build_optimizer.py  globals.py  main_file.py  optimizer_builds.json  optimizer_tab.py  relic_checker.py  source_data_handler.py  vessel_handler.py
src/nrplanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: populate_resources.py
(+105 files in other folders)
