[project]
name = "nrplanner"
version = "0.1.0"
description = "Nightreign relic build optimizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "lxml>=6.0.2",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pydantic>=2.0",
]

[tool.uv.workspace]
members = ["backend"]
