[project]
name = "nrplanner"
version = "0.1.0"
description = "Nightreign relic build optimizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "lxml>=6.0.2",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pydantic>=2.0",
]

[tool.uv.workspace]
members = ["backend"]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "coverage>=7.4.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# nrplanner package lives at the repo root, not in src/
where = ["."]
include = ["nrplanner*"]

[tool.pytest.ini_options]
testpaths = ["nrplanner/tests"]
markers = [
    "integration: real external data or filesystem required",
]
